feat: 完善demo